fix back to top spacing

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
 .glassBorder {
   z-index: 10;
   /* background: rgba(255, 255, 255, 0.2); */
-  background: rgba(245, 240, 221, 0.5);
+  background: rgba(245, 240, 221, 0.6);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 16px;
